<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.DetailsFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/animal_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/details_body_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animal_detail_title">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_body_container_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">
            <ImageView
                android:id="@+id/tv_image"
                android:layout_width="100dp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="10dp"
                android:contentDescription="@string/image_descr" />

            <TextView
                android:id="@+id/tv_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/test_firstname"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="5dp"
                app:layout_constraintEnd_toEndOf="@id/tv_lastname"
                app:layout_constraintStart_toStartOf="@id/tv_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/test_lastname"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_firstname"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/time_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_crt"
                app:layout_constraintStart_toStartOf="@id/tv_image"
                app:layout_constraintEnd_toEndOf="@id/time_create"
                app:layout_constraintTop_toBottomOf="@id/tv_firstname"
                android:layout_marginVertical="8dp"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/time_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_timecreate"
                app:layout_constraintStart_toEndOf="@id/time_create_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lastname"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="8dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/time_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:text="@string/string_upd"
                app:layout_constraintStart_toStartOf="@id/tv_image"
                app:layout_constraintEnd_toEndOf="@id/time_update"
                app:layout_constraintTop_toBottomOf="@id/time_create_title"
                android:layout_marginVertical="8dp"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/time_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_timeupdate"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="5dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/time_update_title"
                app:layout_constraintTop_toBottomOf="@id/time_create"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/fact_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fact_str"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_update_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginVertical="8dp"/>
            <TextView
                android:id="@+id/fact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_fact"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintStart_toEndOf="@id/fact_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_update_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="8dp"
                android:textSize="20sp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_details"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="70dp"
        android:text="@string/error"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>