<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DetailsActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/animal_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/details_body_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animal_detail_title">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_body_container_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:id="@+id/fact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact_str"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginVertical="8dp"/>
            <TextView
                android:id="@+id/fact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fact"
                app:layout_constraintStart_toEndOf="@id/fact_title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginVertical="8dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/time_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_crt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fact_title"
                android:layout_marginVertical="8dp"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/time_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20.12.2022"
                app:layout_constraintStart_toEndOf="@id/time_create_title"
                app:layout_constraintTop_toBottomOf="@id/fact"
                android:layout_marginVertical="8dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/time_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_upd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_create_title"
                android:layout_marginVertical="8dp"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/time_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22.02.2022"
                app:layout_constraintStart_toEndOf="@id/time_update_title"
                app:layout_constraintTop_toBottomOf="@id/time_create"
                android:layout_marginVertical="8dp"
                android:textSize="24sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>